<resources>
    <string name="app_name">Intent</string>
    <string name="pindah_activity">Pindah Activity</string>
    <string name="ini_adalah_move_activity">Ini Adalah Move Activity</string>
    <string name="pindah_activity_dengan_data">pindah activity dengan data</string>
    <string name="pindah_dengan_data_kelas">pindah dengan data kelas</string>
    <string name="dial_number">Dial Number</string>
    <string name="pilih_angka">Pilih Angka</string>
    <string name="_50">50</string>
    <string name="_200">200</string>
    <string name="_150">150</string>
    <string name="_100">100</string>
    <string name="angka_dari_activity">Angka dari Activity</string>
</resources>
