<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_move_activity"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/pindah_activity"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btn_move_activity_with_data"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/pindah_activity_dengan_data"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btn_move_activity_with_data_class"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/pindah_dengan_data_kelas"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btn_exp_dial"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/dial_number"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btn_pilih_angka"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/pilih_angka"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/angka_dari_activity"
        android:textSize="25sp"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

</LinearLayout>